# lumon

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: commit.md  fix-issues.md  install.md  lint.md  pr.md  python.md  review.md  test.md  typecheck.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/fix-issues/: SKILL.md
.claude/skills/install/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/python/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/typecheck/: SKILL.md
cli/claude/: CLAUDE.md  README.md
docs/: context.md  spec.md
lumon/: __init__.py  ast_nodes.py  backends.py  bridge.py  builtins.py  cli.py  cli_schedule.py  daemon.py  environment.py  errors.py  evaluator.py  grammar.py  interpreter.py  parser.py  plugins.py  scheduler.py  serializer.py  source_utils.py  type_checker.py  values.py
lumon/_deploy/: CLAUDE.md  plugin-CLAUDE.md  sandbox-guard.py  settings.json
lumon/_deploy/plugin_skills/fix-issues/: SKILL.md
lumon/_deploy/skills/ask-spawn/: SKILL.md
lumon/_deploy/skills/auto-deploy/: SKILL.md
lumon/_deploy/skills/code-organization/: SKILL.md
lumon/_deploy/skills/issues/: SKILL.md
lumon/_deploy/skills/lumon/: SKILL.md
lumon/_deploy/skills/plugins-issues/: SKILL.md
lumon/_deploy/skills/review/: SKILL.md
lumon/_deploy/skills/version-control/: SKILL.md
lumon/_deploy/skills/workflow/: SKILL.md
lumon/_manifests/: csv.lumon  git.lumon  http.lumon  index.lumon  io.lumon  json.lumon  list.lumon  map.lumon  number.lumon  text.lumon  time.lumon  type.lumon
lumon/_spec/: spec.md
plans/: type-checker.md
scripts/: clean_coverage.sh
tests/: conftest.py  test_backends_real.py  test_bindings.py  test_bridges.py  test_builtins.py  test_cli.sh  test_cli_unit.py  test_control_flow.py  test_daemon.py  test_errors.py  test_functions.py  test_git.py  test_http.py  test_interpret_suspend.py  test_io.py  test_json_csv.py  test_operators.py  test_persistence.py  test_plugins.py  test_scheduler.py  test_serializer.py  test_source_utils.py  test_testing.py  test_time.py  test_type_checker.py  test_types.py
