[project]
name = "lumon"
version = "0.1.2"
description = "A minimal, safe, pseudocode-like interpreted language for AI agents"
requires-python = ">=3.11"
dependencies = ["lark>=1.3"]

[project.scripts]
lumon = "lumon.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pyright"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lumon*"]

[tool.setuptools.package-data]
"lumon._spec" = ["*.md"]
"lumon._deploy" = ["*.md", "*.json", "*.py"]

[tool.pyright]
venvPath = "."
venv = ".venv"
