[project]
name = "lumon"
version = "0.7.0"
description = "A minimal, safe, pseudocode-like interpreted language for AI agents"
requires-python = ">=3.11"
dependencies = ["lark>=1.3"]

[project.scripts]
lumon = "lumon.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pyright", "pylint"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lumon*"]

[tool.setuptools.package-data]
"lumon._spec" = ["*.md"]
"lumon._deploy" = ["*.md", "*.json", "*.py", "skills/*/SKILL.md", "plugin_skills/*/SKILL.md"]
"lumon._manifests" = ["*.lumon"]

[tool.pylint.main]
load-plugins = []

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-many-return-statements",   # evaluator/parser dispatch functions
    "too-many-branches",            # evaluator/parser dispatch functions
    "too-many-statements",          # evaluator/parser dispatch functions
    "too-many-locals",              # evaluator/parser dispatch functions
    "too-many-arguments",           # evaluator/parser dispatch functions
    "too-many-positional-arguments",# evaluator/parser dispatch functions
    "too-many-instance-attributes", # Environment has many fields by design
    "too-few-public-methods",       # dataclasses / AST nodes
    "too-many-public-methods",      # lark Transformer has many visit methods
    "too-many-nested-blocks",       # plugin setup has nested try/for/if
    "protected-access",             # internal modules access _fields by design
    "unnecessary-lambda",           # lambdas used for builtin registration clarity
    "duplicate-code",               # builtins/evaluator share type-checking patterns
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
# sandbox-guard.py is a deployed hook, not a regular module
module-naming-style = "any"

[tool.coverage.run]
source = ["lumon"]
parallel = true
omit = ["lumon/_deploy/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.pyright]
venvPath = "."
venv = ".venv"
